# deep-fake-audio-detection

./: Makefile  README.md  pyproject.toml  requirements.txt
app/: streamlit_app.py
config/: config.yaml
data/: README.md
notebooks/: deepfake_audio_detection.ipynb
reports/: metrics.md
