[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deepfake-audio-detection"
version = "1.0.0"
description = "Genuine vs AI-generated speech detection (MARS Open Projects 2026, PS-2)."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]
